# spark

./: .gitignore  .lefthook.yml  .mise.toml  CLAUDE.md  Dockerfile  MAINTAINERS  README.md  docker-compose.yml  so.template.config.yaml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: post-edit-format.sh  pr-template-reminder.sh
.cursor/: hooks.json
.cursor/hooks/: format.sh
docker/: .gitignore  bitcoin.conf  config.json  entrypoint.sh  init-databases.sh  operator.config.yaml
docker/keys/: operator_0.key  operator_1.key  operator_2.key
docs/plans/: 2026-03-12-token-transaction-integration-test-gaps.md
protos/: gossip.proto  mock.proto  multisig.proto  spark.proto  spark_internal.proto  spark_partner.proto  spark_token.proto
public/scripts/: verify-android-min-api.sh  verify-android-page-size.sh
schemas/: ssp_2025_03_19_schema.graphql  ssp_rc_schema.graphql
sdks/js/: package.json  postinstall.sh  turbo.json
signer/: Cargo.toml
signer/spark-frost/: Cargo.toml
signer/spark-frost-uniffi/: README.md  build-bindings.sh  build-rn-bindings.sh
signer/spark-frost/src/: bridge.rs  lib.rs  tx.rs  vss.rs
signer/spark-token-primitives/: Cargo.toml  README.md
signer/spark-token-primitives-uniffi/: .gitignore  Cargo.toml  build-bindings.sh  build-rn-bindings.sh  build-swift.sh
spark/: .golangci.yml  .mise.toml  CLAUDE.md  go.mod
spark/common/: bitcoin.go  bitcoin_test.go  connection.go  connection_test.go  proof.go  spark_address.go  spark_address_hash_test.go  spark_address_test.go  token_invoice_signing_hash_cross_language_json_test.go  (+1 more)
(+657 files in other folders)
